Adds tests for the text block feature